CLN: Use port 9735 and log to stdout (#1701)
* use port 9735 for cln node

this makes it consistent with the rest of the environment (default port for regtest is 19846)

* cln log to stdout

---------

Co-authored-by: Riccardo Balbo <riccardo0blb@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -489,6 +489,8 @@ services:
     env_file: *env_file
     command:
       - 'lightningd'
+      - '--addr=0.0.0.0:9735'
+      - '--announce-addr=cln:9735'
       - '--network=regtest'
       - '--alias=cln'
       - '--bitcoin-rpcconnect=bitcoin'
@@ -497,7 +499,6 @@ services:
       - '--large-channels'
       - '--rest-port=3010'
       - '--rest-host=0.0.0.0'
-      - '--log-file=/home/clightning/.lightning/debug.log'
     expose:
       - "9735"
     ports:
