make ui consistent ...

--- a/.env.development
+++ b/.env.development
@@ -29,8 +29,8 @@ SLACK_BOT_TOKEN=
 SLACK_CHANNEL_ID=
 
 # lnurl ... you'll need a tunnel to localhost:3000 for these
-LNAUTH_URL=
-LNWITH_URL=
+LNAUTH_URL=http://localhost:3000/api/lnauth
+LNWITH_URL=http://localhost:3000/api/lnwith
 
 ########################################
 # SNDEV STUFF WE PRESET                #
