--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "migrate": "prisma migrate deploy",
     "start": "NODE_OPTIONS='--trace-warnings --max-old-space-size=4096 --max-semi-space-size=128' next start -p $PORT --keepAliveTimeout 120000",
     "lint": "standard",
+    "eslint": "eslint",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest",
     "worker": "tsx --tsconfig jsconfig.json --trace-warnings worker/index.js",
     "worker:dev": "tsx --tsconfig jsconfig.json --trace-warnings --watch worker/index.js"
@@ -123,8 +124,13 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@next/eslint-plugin-next": "^14.2.15",
-    "eslint": "^9.12.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-sonarjs": "^3.0.1",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
     "standard": "^17.1.2"
   }
