--- a/.github/workflows/extend-awards.yml
+++ b/.github/workflows/extend-awards.yml
@@ -1,10 +1,15 @@
 name: extend-awards
 run-name: Extending awards
 on:
-  push:
+  pull_request:
+    types: [ closed ]
     branches:
       - master
 jobs:
+  unfiltered:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo '${{ toJson(github) }}'
   if_merged:
     if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-latest
@@ -18,3 +23,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: peter-evans/create-pull-request@v7
+        with:
+          commit-message: extending awards
+          title: Extending awards
