make create-pull-request use a custom branch, and filter that out, so PRs generated by action don't invoke action again

--- a/.github/workflows/extend-awards.yml
+++ b/.github/workflows/extend-awards.yml
@@ -7,7 +7,11 @@ on:
       - master
 jobs:
   if_merged:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: |
+      github.event_name == 'pull_request' &&
+      github.event.action == 'closed' &&
+      github.event.pull_request.merged == true &&
+      github.event.pull_request.head.ref != 'extend-awards/patch'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +26,7 @@ jobs:
       - uses: peter-evans/create-pull-request@v7
         with:
           add-paths: awards.csv
+          branch: extend-awards/patch
           commit-message: Extending awards.csv
           title: Extending awards.csv
           body: A PR was merged that solves an issue and awards.csv should be extended.
