--- a/.github/workflows/extend-awards.yml
+++ b/.github/workflows/extend-awards.yml
@@ -1,7 +1,6 @@
 name: extend-awards
-run-name: Extending awards
 on:
-  pull_request:
+  pull_request_target:
     types: [ closed ]
     branches:
       - master
@@ -12,7 +11,7 @@ permissions:
 jobs:
   if_merged:
     if: |
-      github.event_name == 'pull_request' &&
+      github.event_name == 'pull_request_target' &&
       github.event.action == 'closed' &&
       github.event.pull_request.merged == true &&
       github.event.pull_request.head.ref != 'extend-awards/patch'
