DNS Resolver env setting, fixes inconsistencies with results

--- a/.env.production
+++ b/.env.production
@@ -23,3 +23,6 @@ DB_APP_CONNECTION_LIMIT=4
 DB_WORKER_CONNECTION_LIMIT=2
 DB_TRANSACTION_TIMEOUT=10000
 NEXT_TELEMETRY_DISABLED=1
+
+# DNS resolver for custom domain verification
+DNS_RESOLVER=1.1.1.1
