--- a/.env.development
+++ b/.env.development
@@ -184,3 +184,6 @@ CPU_SHARES_MODERATE=512
 CPU_SHARES_LOW=256
 
 NEXT_TELEMETRY_DISABLED=1
+
+# DNS resolver for custom domain verification
+DNS_RESOLVER=1.1.1.1
