--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "textarea-caret": "^3.1.0",
     "tldts": "^6.1.51",
     "tsx": "^4.19.1",
+    "twitter-api-v2": "^1.22.0",
     "unist-util-visit": "^5.0.0",
     "unzipper": "^0.12.3",
     "url-unshort": "^6.1.0",
