message formatting and scheduled job

--- a/.env.development
+++ b/.env.development
@@ -32,6 +32,12 @@ SLACK_CHANNEL_ID=
 LNAUTH_URL=http://localhost:3000/api/lnauth
 LNWITH_URL=http://localhost:3000/api/lnwith
 
+# auto social poster
+TWITTER_POSTER_API_KEY=
+TWITTER_POSTER_API_KEY_SECRET=
+TWITTER_POSTER_ACCESS_TOKEN=
+TWITTER_POSTER_ACCESS_TOKEN_SECRET=
+
 ########################################
 # SNDEV STUFF WE PRESET                #
 # which you can override in .env.local #
