Fix NWC with @nostr-dev-kit/ndk-wallet

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@apollo/server": "^4.11.0",
     "@as-integrations/next": "^3.1.0",
     "@auth/prisma-adapter": "^2.7.0",
+    "@cashu/cashu-ts": "^2.4.1",
     "@graphql-tools/schema": "^10.0.6",
     "@lightninglabs/lnc-web": "^0.3.2-alpha",
     "@noble/curves": "^1.6.0",
     "@nostr-dev-kit/ndk": "^2.12.2",
+    "@nostr-dev-kit/ndk-wallet": "^0.5.0",
     "@opensearch-project/opensearch": "^2.12.0",
     "@prisma/client": "^5.20.0",
     "@slack/web-api": "^7.6.0",
