one press automated nlp setup (unstable)

--- a/.env.development
+++ b/.env.development
@@ -98,12 +98,13 @@ OPENSEARCH_USERNAME=admin
 OPENSEARCH_PASSWORD=mVchg1T5oA9wudUh
 OPENSEARCH_INDEX=item
 OPENSEARCH_MODEL_ID=
+OPENSEARCH_MODEL_NAME="huggingface/sentence-transformers/all-mpnet-base-v2"
 
 # prisma db url
 DATABASE_URL="postgresql://sn:password@db:5432/stackernews?schema=public"
-DB_APP_CONNECTION_LIMIT=2
-DB_WORKER_CONNECTION_LIMIT=2
-DB_TRANSACTION_TIMEOUT=5000
+DB_APP_CONNECTION_LIMIT=4
+DB_WORKER_CONNECTION_LIMIT=4
+DB_TRANSACTION_TIMEOUT=10000
 
 # polling intervals
 NEXT_PUBLIC_FAST_POLL_INTERVAL=1000
