--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -4,6 +4,12 @@ FROM node:18.20.4-bullseye
 
 ENV NODE_ENV=development
 
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y jq 
+
+COPY docker-entrypoint.sh ./docker-entrypoint.sh
+RUN chmod +x ./docker-entrypoint.sh
+
 ARG UID
 ARG GID
 RUN groupadd -fg "$GID" apprunner
@@ -11,3 +17,7 @@ RUN useradd -om -u "$UID" -g "$GID" apprunner
 USER apprunner
 
 WORKDIR /app
+
+ENTRYPOINT ["./docker-entrypoint.sh"]
+
+CMD ["sh","-c","npm run worker:dev"]
