refactor, cleanup: domain mapper in resolver, can get mappings from gql, only the custom domain's sub can be selected during post, middleware cleanup, test domain logger

--- a/.env.development
+++ b/.env.development
@@ -194,3 +194,6 @@ NEXT_TELEMETRY_DISABLED=1
 
 # DNS resolver for custom domain verification
 DNS_RESOLVER=1.1.1.1
+
+# domain debug
+DOMAIN_DEBUG=true
