--- a/.env.development
+++ b/.env.development
@@ -195,5 +195,5 @@ NEXT_TELEMETRY_DISABLED=1
 # DNS resolver for custom domain verification
 DNS_RESOLVER=1.1.1.1
 
-# domain debug
-DOMAIN_DEBUG=true
+# domain debug logger
+CUSTOM_DOMAIN_LOGGER=false
