fix avatar in dev

--- a/.env.development
+++ b/.env.development
@@ -85,6 +85,7 @@ IMGPROXY_READ_TIMEOUT=10
 IMGPROXY_WRITE_TIMEOUT=10
 IMGPROXY_DOWNLOAD_TIMEOUT=9
 IMGPROXY_ENABLE_VIDEO_THUMBNAILS=1
+IMGPROXY_ALLOW_ORIGIN=http://localhost:3000
 # IMGPROXY_DEVELOPMENT_ERRORS_MODE=1
 # IMGPROXY_ENABLE_DEBUG_HEADERS=true
 
