--- a/.env.development
+++ b/.env.development
@@ -114,7 +114,7 @@ NEXT_PUBLIC_EXTRA_LONG_POLL_INTERVAL=300000
 
 # containers can't use localhost, so we need to use the container name
 IMGPROXY_URL_DOCKER=http://imgproxy:8080
-MEDIA_URL_DOCKER=http://s3:4566/uploads
+MEDIA_URL_DOCKER=http://aws:4566/uploads
 
 # postgres container stuff
 POSTGRES_PASSWORD=password
@@ -177,6 +177,7 @@ AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
+LOCALSTACK_ENDPOINT=http://aws:4566
 
 # tor proxy
 TOR_PROXY=http://tor:7050/
@@ -191,3 +192,7 @@ CPU_SHARES_MODERATE=512
 CPU_SHARES_LOW=256
 
 NEXT_TELEMETRY_DISABLED=1
+
+# custom domains stuff
+# DNS resolver for custom domain verification
+DNS_RESOLVER=1.1.1.1
