--- a/.env.development
+++ b/.env.development
@@ -194,5 +194,7 @@ CPU_SHARES_LOW=256
 NEXT_TELEMETRY_DISABLED=1
 
 # custom domains stuff
-# DNS resolver for custom domain verification
-DNS_RESOLVER=1.1.1.1
+
+# DNS server for custom domain verification
+# dnsmasq mock value: 172.20.0.2:5353
+DOMAINS_DNS_SERVER=172.20.0.2:5353
