--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PRISMA_SLOW_LOGS_MS=
 GRAPHQL_SLOW_LOGS_MS=
 NODE_ENV=development
-COMPOSE_PROFILES='minimal,images,search,payments,wallets,email,capture'
+COMPOSE_PROFILES='minimal,images,search,payments,wallets,email,capture,domains'
 
 ############################################################################
 # OPTIONAL SECRETS                                                         #
@@ -194,7 +194,6 @@ CPU_SHARES_LOW=256
 NEXT_TELEMETRY_DISABLED=1
 
 # custom domains stuff
-
 # DNS server for custom domain verification
-# dnsmasq mock value: 172.20.0.2:5353
+# dnsmasq reachable by containers 172.20.0.2:53, outside of docker with 0.0.0.0:5353
 DOMAINS_DNS_SERVER=172.20.0.2:53
