better error handling of node:dns resolver

--- a/.env.development
+++ b/.env.development
@@ -195,5 +195,5 @@ NEXT_TELEMETRY_DISABLED=1
 
 # custom domains stuff
 # DNS server for custom domain verification
-# dnsmasq reachable by containers 172.20.0.2:53, outside of docker with 0.0.0.0:5353
-DOMAINS_DNS_SERVER=172.20.0.2:53
+# dnsmasq reachable by containers 172.20.0.2(:53), outside of docker with 0.0.0.0:5353
+DOMAINS_DNS_SERVER=172.30.0.2
