POSIX compliance, add env var to .env.development, adjust README

--- a/.env.development
+++ b/.env.development
@@ -191,3 +191,8 @@ CPU_SHARES_MODERATE=512
 CPU_SHARES_LOW=256
 
 NEXT_TELEMETRY_DISABLED=1
+
+# custom domains stuff
+# local DNS server for custom domain verification, by default it's dnsmasq.
+# reachable by containers on 172.30.0.2(:53), outside of docker with 0.0.0.0:5353
+DOMAINS_DNS_SERVER=172.30.0.2
