ELBv2 implementation to attach a certificate to a load balancer; Mock ELBv2 implementation for development; attach a certificate to ELB as last step of domainVerification; detach certificate from ELB as part of deleteDomainCertificate; DomainVerificationStage ELB_ATTACH_CERTIFICATE

--- a/.env.development
+++ b/.env.development
@@ -177,7 +177,9 @@ AWS_ACCESS_KEY_ID=AKIAIOSFODNN7EXAMPLE
 AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
+# custom domain ACM, ELBv2
 LOCALSTACK_ENDPOINT=http://aws:4566
+ELB_NAME=mock-lb
 
 # tor proxy
 TOR_PROXY=http://tor:7050/
