use directly the interested ELB Listener ARN via env vars; get rid of functions that we don't need; consistency clean-up

--- a/.env.development
+++ b/.env.development
@@ -179,7 +179,8 @@ PERSISTENCE=1
 SKIP_SSL_CERT_DOWNLOAD=1
 # custom domain ACM, ELBv2
 LOCALSTACK_ENDPOINT=http://aws:4566
-ELB_NAME=mock-lb
+ELB_NAME=sndev-lb
+ELB_LISTENER_ARN=arn:aws:elasticloadbalancing:us-east-1:123456789012:listener/app/sndev-lb/1234567890abcdef/1234567890abcdef
 
 # tor proxy
 TOR_PROXY=http://tor:7050/
