Let LND certificates for dev expire after 2049

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -321,6 +321,7 @@ services:
       - '--externalip=sn_lnd'
       - '--tlsextradomain=sn_lnd'
       - '--tlsextradomain=host.docker.internal'
+      - '--tlscertduration=876000h'
       - '--listen=0.0.0.0:9735'
       - '--rpclisten=0.0.0.0:10009'
       - '--restlisten=0.0.0.0:8080'
@@ -635,6 +636,7 @@ services:
       - '--externalip=router_lnd'
       - '--tlsextradomain=router_lnd'
       - '--tlsextradomain=host.docker.internal'
+      - '--tlscertduration=876000h'
       - '--listen=0.0.0.0:9735'
       - '--rpclisten=0.0.0.0:10009'
       - '--restlisten=0.0.0.0:8080'
