--- a/.env.development
+++ b/.env.development
@@ -184,6 +184,7 @@ grpc_proxy=http://tor:7050/
 
 # lnbits
 LNBITS_WEB_PORT=5001
+LNBITS_WEB_PORT_V1=5002
 
 # CPU shares for each category
 CPU_SHARES_IMPORTANT=1024
