--- a/package.json
+++ b/package.json
@@ -127,8 +127,10 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.15",
+    "@testing-library/react-hooks": "^8.0.1",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
     "standard": "^17.1.2"
   }
 }
