--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "async-mutex": "^0.5.0",
     "async-retry": "^1.3.3",
     "aws-sdk": "^2.1691.0",
+    "bcryptjs": "^3.0.2",
     "bech32": "^2.0.0",
     "bolt11": "^1.4.1",
     "bootstrap": "^5.3.3",
