Add fireworks animation

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-dom": "^18.3.1",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-markdown": "^9.0.1",
+    "react-particles": "^2.10.1",
     "react-string-replace": "^1.1.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.4",
@@ -97,6 +98,8 @@
     "source-map": "^0.8.0-beta.0",
     "textarea-caret": "^3.1.0",
     "tldts": "^6.1.51",
+    "tsparticles-engine": "^2.10.1",
+    "tsparticles-preset-fireworks": "^2.10.1",
     "tsx": "^4.19.1",
     "twitter-api-v2": "^1.22.0",
     "unist-util-visit": "^5.0.0",
