--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@prisma/client": "^5.20.0",
     "@slack/web-api": "^7.6.0",
     "@svgr/webpack": "^8.1.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/preset-fireworks": "^3.2.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@yudiel/react-qr-scanner": "^2.0.8",
     "acorn": "^8.12.1",
     "ajv": "^8.17.1",
@@ -82,7 +86,6 @@
     "react-dom": "^18.3.1",
     "react-ios-pwa-prompt": "^1.8.4",
     "react-markdown": "^9.0.1",
-    "react-particles": "^2.12.2",
     "react-string-replace": "^1.1.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-textarea-autosize": "^8.5.4",
@@ -98,8 +101,6 @@
     "source-map": "^0.8.0-beta.0",
     "textarea-caret": "^3.1.0",
     "tldts": "^6.1.51",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-preset-fireworks": "^2.12.0",
     "tsx": "^4.19.1",
     "twitter-api-v2": "^1.22.0",
     "unist-util-visit": "^5.0.0",
