extend-awards job: fix git commit exit code, ignore Soxasora, PR author filter (#2314)
* Don't fail extend-awards job if there are no changes

* Also ignore Soxasora in extends-awards.py

* Don't run extend-awards job if PR author is ignored

--- a/.github/workflows/extend-awards.yml
+++ b/.github/workflows/extend-awards.yml
@@ -14,7 +14,10 @@ jobs:
       github.event_name == 'pull_request_target' &&
       github.event.action == 'closed' &&
       github.event.pull_request.merged == true &&
-      github.event.pull_request.head.ref != 'extend-awards/patch'
+      github.event.pull_request.head.ref != 'extend-awards/patch' &&
+      github.event.pull_request.user.login != 'huumn' &&
+      github.event.pull_request.user.login != 'ekzyis' &&
+      github.event.pull_request.user.login != 'Soxasora'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +47,7 @@ jobs:
       - name: Commit changes and push to existing branch
         if: env.exists == 'true'
         run: |
-          git commit -am "Extending awards.csv"
+          git commit -am "Extending awards.csv" || exit 0
           git push origin extend-awards/patch
       - uses: peter-evans/create-pull-request@v7
         if: env.exists == 'false'
