payment state presentation

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@as-integrations/next": "^3.1.0",
     "@auth/prisma-adapter": "^2.7.0",
     "@cashu/cashu-ts": "^2.4.1",
+    "@graphile/depth-limit": "^0.3.1",
     "@graphql-tools/schema": "^10.0.6",
     "@lightninglabs/lnc-web": "^0.3.2-alpha",
     "@noble/curves": "^1.6.0",
