--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.15",
+    "copy-webpack-plugin": "^13.0.1",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
     "standard": "^17.1.2"
