--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--trace-warnings --enable-source-maps' next dev",
     "build": "next build",
+    "analyze": "ANALYZE=true next build",
     "migrate": "prisma migrate deploy",
     "start": "NODE_OPTIONS='--trace-warnings --max-old-space-size=4096 --max-semi-space-size=128' next start -p $PORT --keepAliveTimeout 120000",
     "lint": "standard",
@@ -129,6 +130,7 @@
     ]
   },
   "devDependencies": {
+"@next/bundle-analyzer": "^14.2.15",
     "@next/eslint-plugin-next": "^14.2.15",
     "eslint": "^9.12.0",
     "jest": "^29.7.0",
