Serve CLNRest over HTTP in dev
Upgrade to 24.11 fixed CORS issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -530,8 +530,9 @@ services:
       - '--bitcoin-rpcuser=${RPC_USER}'
       - '--bitcoin-rpcpassword=${RPC_PASS}'
       - '--large-channels'
-      - '--rest-port=3010'
-      - '--rest-host=0.0.0.0'
+      - '--clnrest-port=3010'
+      - '--clnrest-host=0.0.0.0'
+      - '--clnrest-protocol=http'
     expose:
       - "9735"
     ports:
